--- a/frontend/src/chat/thread/thread.scss
+++ b/frontend/src/chat/thread/thread.scss
@@ -10,6 +10,7 @@
         max-height: calc(100vh - 164px);
         max-height: calc(calc(var(--vh, 1vh) * 100) - 164px);
         overflow-y: scroll;
+        overflow-x: hidden;
 
         .thread-title {
             display: flex;
